added JavaDocs to functions